@@ -98,10 +98,10 @@ do {                                                       \
 
 #define utstring_bincpy(s,b,l)                             \
 do {                                                       \
-  utstring_reserve(s,(l)+1);                               \
+  utstring_reserve((s),(l)+1);                               \
   if (l) memcpy(&(s)->d[(s)->i], b, l);                    \
-  s->i += l;                                               \
-  s->d[s->i]='\0';                                         \
+  (s)->i += l;                                               \
+  (s)->d[(s)->i]='\0';                                         \
 } while(0)
 
 #define utstring_concat(dst,src)                           \
