@@ -7,8 +7,10 @@ Click to return to the link:index.html[uthash home page].
 
 Version 1.9.5 (2011-??-??)
 --------------------------
+* added utarray_renew
 * fixed memory leak in `uthash_clear` when using Bloom filter (thanks, Jan Hättig!)
 * add parentheses to `HASH_ADD` to fix preprocessing of certain arguments (thanks, Aaron Rosen!) 
+* more parenthesizations
 
 Version 1.9.4 (2011-06-05)
 --------------------------
